After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 707851 - Misc code clean-ups for the wayland branch
Misc code clean-ups for the wayland branch
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: wayland
unspecified
Other All
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2013-09-10 11:47 UTC by Giovanni Campagna
Modified: 2013-09-10 13:56 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
util: fix warnings when compiling gnome-shell-wayland (1.05 KB, patch)
2013-09-10 11:47 UTC, Giovanni Campagna
committed Details | Review
wayland: fix deprecation warnings (7.10 KB, patch)
2013-09-10 11:47 UTC, Giovanni Campagna
committed Details | Review
wayland: fix interface versioning (3.88 KB, patch)
2013-09-10 11:47 UTC, Giovanni Campagna
committed Details | Review
wayland: use symbolic constants for interface version (16.29 KB, patch)
2013-09-10 11:47 UTC, Giovanni Campagna
committed Details | Review

Description Giovanni Campagna 2013-09-10 11:47:29 UTC
Some compile warnings and some wl interface version fixes.
Comment 1 Giovanni Campagna 2013-09-10 11:47:31 UTC
Created attachment 254586 [details] [review]
util: fix warnings when compiling gnome-shell-wayland

Replace our version of the gettext macros with those in glib,
so that they don't conflict with gnome-shell.
Comment 2 Giovanni Campagna 2013-09-10 11:47:34 UTC
Created attachment 254587 [details] [review]
wayland: fix deprecation warnings

Replace the deprecated APIs with the modern variants (which
also give us full control on the versioning).
Also, note that we only support version 2 of wl_seat. Version
3 is for multiple pointer/keyboards for a client, but
we don't implement that yet. If a client requests version 3
of wl_seat or make a version 3 request, it will get a protocol error.
Comment 3 Giovanni Campagna 2013-09-10 11:47:38 UTC
Created attachment 254588 [details] [review]
wayland: fix interface versioning

Add MIN(...) with the interface version actually implemented
to all resource constructor, so that we never risk seeing requests
we don't implement (and consequently segfault)
Comment 4 Giovanni Campagna 2013-09-10 11:47:42 UTC
Created attachment 254589 [details] [review]
wayland: use symbolic constants for interface version

Replace magic numbers scattered around the code with proper
macros collected in one header file.
Comment 5 Jasper St. Pierre (not reading bugmail) 2013-09-10 13:24:15 UTC
Review of attachment 254586 [details] [review]:

OK.
Comment 6 Jasper St. Pierre (not reading bugmail) 2013-09-10 13:24:46 UTC
Review of attachment 254587 [details] [review]:

Looks good.
Comment 7 Jasper St. Pierre (not reading bugmail) 2013-09-10 13:25:07 UTC
Review of attachment 254588 [details] [review]:

OK.
Comment 8 Jasper St. Pierre (not reading bugmail) 2013-09-10 13:25:46 UTC
Review of attachment 254589 [details] [review]:

LGTM.
Comment 9 Giovanni Campagna 2013-09-10 13:56:37 UTC
Attachment 254586 [details] pushed as 72b6699 - util: fix warnings when compiling gnome-shell-wayland
Attachment 254587 [details] pushed as 95a9655 - wayland: fix deprecation warnings
Attachment 254588 [details] pushed as 73ee491 - wayland: fix interface versioning
Attachment 254589 [details] pushed as 168ea64 - wayland: use symbolic constants for interface version